frame/support/test/tests/pallet_ui/step_007.rs
#[frame_support::pallet]
mod pallet {
	#[pallet::config]
	pub trait Trait {}
}

fn main() {
}
